<resources>
    <string name="app_name">NextBus</string>
    <string name="title_home">Home</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_notifications">Notifications</string>

    <string name="settings">Settings</string>

    <string name="search_radius_title">Query radius</string>
    <string name="search_radius_summary">Query radius in meters from your current location</string>

    <string name="stop_near_title">When the stop is near</string>
    <string name="stop_near_summary">Max distance in meters when the stop is considered near</string>

    <string name="search_amount_title">Stops</string>
    <string name="search_amount_summary">How many stops will be shown from the result</string>

    <string name="update_displacement_title">Displacement (in meters)</string>
    <string name="update_displacement_summary">Displacement after which should refresh</string>

    <string name="highlight_stoptime_title">Flash background</string>
    <string name="highlight_stoptime_summary">Flash background if the stop is near and the departure time is within 10 minutes</string>

    <string name="leaves">Leaves</string>
    <string name="next">Next</string>
    <string name="stop">Stop</string>
    <string name="destination">Destination</string>
    <string name="route">Route</string>

    <string name="add_route">Add route (e.g. 550)</string>

    <string name="location_not_found">Location not found</string>

    <string name="added_to_favorites">Added %1$s to favorites</string>
    <string name="remove_from_favorites">Removed %1$s from favorites</string>
    <string name="favorites_explanation">Favorite routes will be sorted first in the home screen when they are in the query range</string>
</resources>
